--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <script>
       //Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-        authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-        projectId: "multiplayer-car-racing-game",
-        storageBucket: "",
-        messagingSenderId: "936147099930",
-        appId: "1:936147099930:web:dba47c5bb648f4ef"
-      };
+    apiKey: "AIzaSyAFYc8tC6LUPHckzeKh8PltC2US7C0KnjA",
+    authDomain: "c35-class-d290c.firebaseapp.com",
+    databaseURL: "https://c35-class-d290c.firebaseio.com",
+    projectId: "c35-class-d290c",
+    storageBucket: "c35-class-d290c.appspot.com",
+    messagingSenderId: "673743714229",
+    appId: "1:673743714229:web:f17e0f2aa1e458cbe74bfc"
+  };
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
 
